fix: 🐛 adjust margin for list to improve alignment

--- a/app/components/03-organisms/list/list.module.css
+++ b/app/components/03-organisms/list/list.module.css
@@ -7,7 +7,7 @@
 
 ul.base:not(:has(svg)) {
 	list-style: disc outside;
-	margin-inline-start: 1rem;
+	margin-inline-start: 2rem;
 
 	li {
 		display: list-item;
@@ -16,7 +16,7 @@ ul.base:not(:has(svg)) {
 
 ol.base:not(:has(svg)) {
 	list-style: decimal outside;
-	margin-inline-start: 1rem;
+	margin-inline-start: 2rem;
 
 	li {
 		display: list-item;
